--- a/categories.html
+++ b/categories.html
@@ -3,62 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NicheCraft Automation</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Create a vertical navigation bar */
-        .navbar {
-            height: 100%;
-            width: 250px;
-            position: fixed;
-            top: 0;
-            left: 0;
-            background-color: #333;
-            padding-top: 20px;
-        }
-
-        /* Style for the links in the navbar */
-        .navbar a {
-            padding: 10px 15px;
-            text-decoration: none;
-            font-size: 18px;
-            color: white;
-            display: block;
-            transition: 0.3s;
-        }
-
-        .navbar a:hover {
-            background-color: #575757;
-        }
-
-        /* Main content of the page */
-        .main {
-            margin-left: 250px;
-            padding: 20px;
-        }
-    </style>
+    <title>Categories - NicheCraft Automation</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <!-- Vertical navigation bar -->
     <div class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Categories</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="categories.html">Categories</a>
+        <a href="contact.html">Contact</a>
     </div>
-
-    <!-- Main content area -->
     <div class="main">
-        <h1>Welcome to NicheCraft Automation</h1>
-        <p>Innovative AI-powered services for niche markets, fully automated and customizable.</p>
+        <h1>Service Categories</h1>
+        <p>Explore different categories of automated services we offer.</p>
     </div>
-
 </body>
 </html>
