--- a/about.html
+++ b/about.html
@@ -1,24 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - NicheCraft Automation</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to the external stylesheet for consistency -->
-</head>
-<body>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="categories.html">Categories</a>
-        <a href="contact.html">Contact</a>
-    </div>
-
-    <div class="main">
-        <h1>About Us</h1>
-        <p><strong>NicheCraft Automation</strong> redefines digital service delivery with AI-driven, fully automated solutions targeting untapped niche markets. Our innovative services are unique, scalable, and 100% digital, offering personalized results with zero human interaction.</p>
-        <p>If there isn’t an automated service already offered on the website, AI will instantly create it for you, pricing it affordably to meet your needs. With NicheCraft Automation, every client receives a tailored experience without the need for physical handling or direct communication.</p>
-    </div>
-</body>
-</html>
+<!-- Banner Image at the top -->
+<img src="your-banner-image.jpg" alt="NicheCraft Automation" style="width:100%; height:auto; margin-bottom: 20px;">
