--- a/about.html
+++ b/about.html
@@ -20,3 +20,8 @@
 <p style="font-size: 16px; font-weight: bold;">- A Happy Client</p>
 <p style="font-size: 18px; color: #555; font-style: italic;">"I've never seen anything like this—AI custom-built the perfect service for my business, and it was delivered instantly. No hassles, no fuss."</p>
 <p style="font-size: 16px; font-weight: bold;">- Another Satisfied Customer</p>
+<!-- Timeline / Journey Section -->
+<h2 style="font-size: 28px; color: #00bfa5; text-transform: uppercase; margin-top: 40px;">Our Journey</h2>
+<p style="font-size: 18px; color: #555;"><strong>How We Started:</strong> Necessity is the mother of invention. I started this automated business because I struggled to get a regular, steady job, especially with minimum-wage jobs, which were erratic and didn’t offer financial independence. That's when I realized that automation and AI could create steady, innovative income sources.</p>
+
+<p style="font-size: 18px; color: #555;"><strong>Our Vision for the Future:</strong> While I aim to make a great deal of money through this business and achieve financial independence, I also want to use the success of NicheCraft Automation to give back. My desire has always been to help the less fortunate, particularly those in need within God's Kingdom, and I hope to make that dream a reality as the business grows.</p>
