--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - NicheCraft Automation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Ensure the styles are linked properly -->
 </head>
 <body>
     <div class="navbar">
@@ -14,9 +14,20 @@
         <a href="categories.html">Categories</a>
         <a href="contact.html">Contact</a>
     </div>
+
     <div class="main">
         <h1>Our Services</h1>
-        <p>Explore our range of fully automated, AI-driven services tailored for niche markets.</p>
+        <p>Explore our wide range of automated digital services designed to serve niche markets.</p>
+
+        <h2>Service Categories</h2>
+        <ul>
+            <li><a href="#">Category 1: AI-Powered Content Creation</a></li>
+            <li><a href="#">Category 2: Automated SEO Optimization</a></li>
+            <li><a href="#">Category 3: Custom Software Solutions</a></li>
+            <li><a href="#">Category 4: Digital Marketing Automation</a></li>
+            <li><a href="#">Category 5: Data Analytics & Insights</a></li>
+            <!-- Add more categories here -->
+        </ul>
     </div>
 </body>
 </html>
