--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - NicheCraft Automation</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Contact Us</h1>
+    </header>
 
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <h2>Get in Touch</h2>
+        <p>If you have any questions, feel free to reach out to us.</p>
+
+        <!-- Grayed-out Google Voice number -->
+        <p><strong>Phone:</strong> <span style="color:gray;">(678) 243-0989 (Currently Unavailable)</span></p>
+
+        <form>
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name"><br><br>
+
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email"><br><br>
+
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="5"></textarea><br><br>
+
+            <input type="submit" value="Send Message" class="cta-button">
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 NicheCraft Automation</p>
+    </footer>
+</body>
+</html>
