--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog - NicheCraft Automation</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <main>
+        <h1>Blog Title</h1>
+        <img src="featured-image.jpg" alt="Featured Image">
+        <p>Your blog content about AI tools and data solutions goes here.</p>
+        <div class="share-buttons">
+            <a href="share-link" class="button">Share</a>
+        </div>
+    </main>
+</body>
+</html>
